@@ -2,16 +2,16 @@
 
 \header {
   dedication = "dedication"
-  title = "Title"
-  subtitle = "Subtitle"
-  subsubtitle = "Subsubtitle"
-  composer = "Composer (xxxx-yyyy)"
-  opus = "Opus 0"
-  piece = "Piece I"
-  instrument = "Instrument"
-  arranger = "Arranger"
-  poet = "Poet"
-  texttranslator = "Translator"
+  title = "title"
+  subtitle = "subtitle"
+  subsubtitle = "subsubtitle"
+  composer = "composer (xxxx-yyyy)"
+  opus = "opus 0"
+  piece = "piece i"
+  instrument = "instrument"
+  arranger = "arranger"
+  poet = "poet"
+  texttranslator = "translator"
   copyright = "public domain"
   enteredby = "jcn"
   source =  "urtext"
@@ -31,24 +31,24 @@ dynamics = \notes {
 }
 
 pedal = \notes {
- s2\sustainDown s2\sustainUp
+ s2\sustaindown s2\sustainup
 }
 
 \score {
-  \context PianoStaff <
-    \context Staff=upper \upper
-    \context Dynamics=dynamics \dynamics
-    \context Staff=lower <
+  \context pianostaff <
+    \context staff=upper \upper
+    \context dynamics=dynamics \dynamics
+    \context staff=lower <
       \clef bass
       \lower
     >
-    \context Dynamics=pedal \pedal
+    \context dynamics=pedal \pedal
   >
   \paper {
     \translator {
-      \type "Engraver_group_engraver"
-      \name Dynamics
-      \consists "Output_property_engraver"
+      \type "engraver_group_engraver"
+      \name dynamics
+      \consists "output_property_engraver"
       Generic_property_list = #generic-voice-properties
       \consists "Property_engraver"
       MinimumVerticalExtent = #'(-1 . 1)
